--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -147,7 +147,7 @@
     <string name="bluetooth_pref_summary" product="tablet" msgid="3506962706611366830">"Baimendu tabletari inguruko Bluetooth bidezko gailuekin komunikatzea"</string>
     <string name="bluetooth_pref_summary" product="device" msgid="2192027516577675587">"Eman gailuari inguruko Bluetooth bidezko gailuekin komunikatzeko baimena"</string>
     <string name="bluetooth_pref_summary" product="default" msgid="768958961865499804">"Baimendu telefonoari inguruko Bluetooth bidezko gailuekin komunikatzea"</string>
-    <string name="bluetooth_disable_a2dp_hw_offload" msgid="5942913792817797541">"Desgaitu Bluetooth A2DP-ren hardwarearen deskarga"</string>
+    <string name="bluetooth_disable_a2dp_hw_offload" msgid="5942913792817797541">"Desgaitu Bluetooth A2DPren hardwarearen deskarga"</string>
     <string name="bluetooth_disable_le_audio_hw_offload" msgid="3966022676505972908">"Desgaitu Bluetooth LE AUDIO-ren hardwarearen deskarga"</string>
     <string name="bluetooth_disable_hw_offload_dialog_title" msgid="6001142380445276918">"Gailua berrabiarazi nahi duzu?"</string>
     <string name="bluetooth_disable_hw_offload_dialog_message" msgid="1524373895333698779">"Ezarpen hau aldatzeko, gailua berrabiarazi behar duzu."</string>
@@ -2042,7 +2042,7 @@
     <string name="install_all_warning" product="device" msgid="2348262609815354500">"Baliteke gailuak eta datu pertsonalek aplikazio ezezagunen erasoak jasatea. Iturburu honetako aplikazioak instalatzen badituzu, onartu egingo duzu haiek erabiltzeagatik gailuari agian gertatuko zaizkion kalteen edo datu-galeren erantzulea zeu izango zarela."</string>
     <string name="advanced_settings" msgid="2368905204839169094">"Ezarpen aurreratuak"</string>
     <string name="advanced_settings_summary" msgid="1823765348195530035">"Gaitu ezarpenen aukera gehiago"</string>
-    <string name="application_info_label" msgid="1015706497694165866">"Aplikazioen informazioa"</string>
+    <string name="application_info_label" msgid="1015706497694165866">"Aplikazioaren informazioa"</string>
     <string name="storage_label" msgid="2522307545547515733">"Memoria"</string>
     <string name="auto_launch_label" msgid="4069860409309364872">"Ireki modu lehenetsian"</string>
     <string name="auto_launch_label_generic" msgid="5033137408273064599">"Balio lehenetsiak"</string>
@@ -2690,10 +2690,10 @@
     <string name="background_activity_warning_dialog_title" msgid="3449566823290744823">"Atzeko planoko jarduerak mugatu nahi dituzu?"</string>
     <string name="background_activity_warning_dialog_text" msgid="8202776985767701095">"Aplikazio baten atzeko planoko jarduerak mugatzen badituzu, baliteke aplikazioak behar bezala ez funtzionatzea"</string>
     <string name="background_activity_disabled_dialog_text" msgid="4053170297325882494">"Aplikazio hau bateria optimizatzeko konfiguratuta ez dagoenez, ezin duzu mugatu.\n\nMugatzeko, aktibatu bateriaren optimizazioa."</string>
-    <string name="manager_battery_usage_unrestricted_title" msgid="2426486290463258032">"Murriztapenik gabe"</string>
+    <string name="manager_battery_usage_unrestricted_title" msgid="2426486290463258032">"Mugagabea"</string>
     <string name="manager_battery_usage_optimized_title" msgid="8080765739761921817">"Optimizatua"</string>
     <string name="manager_battery_usage_restricted_title" msgid="7702863764130323118">"Mugatua"</string>
-    <string name="manager_battery_usage_unrestricted_summary" msgid="6819279865465667692">"Eman bateria murriztapenik gabe erabiltzeko baimena atzeko planoan. Baliteke bateria gehiago erabiltzea."</string>
+    <string name="manager_battery_usage_unrestricted_summary" msgid="6819279865465667692">"Eman bateria mugarik gabe erabiltzeko baimena atzeko planoan. Baliteke bateria gehiago erabiltzea."</string>
     <string name="manager_battery_usage_optimized_summary" msgid="1332545476428039900">"Optimizatu erabileran oinarrituta. Aplikazio gehienetarako gomendatua."</string>
     <string name="manager_battery_usage_restricted_summary" msgid="8324695640704416905">"Murriztu bateria-erabilera atzeko planoan. Baliteke aplikazioak behar bezala ez funtzionatzea. Agian jakinarazpenak atzeratu egingo dira."</string>
     <string name="manager_battery_usage_footer" msgid="2635906573922553766">"Aplikazio baten bateria erabiltzeko modua aldatzeak haren errendimenduan eragina izan dezake."</string>
@@ -4042,8 +4042,8 @@
     <string name="notif_type_alerting_summary" msgid="4681068287836313604">"Tonua jo edo dar-dar egin dezake, ezarpenen arabera"</string>
     <string name="notif_type_silent" msgid="6273951794420331010">"Isilak"</string>
     <string name="notif_type_silent_summary" msgid="7820923063105060844">"Soinurik edo dardararik egiten ez duten jakinarazpenak"</string>
-    <string name="notification_listener_allowed" msgid="5536962633536318551">"Baimenduta"</string>
-    <string name="notification_listener_not_allowed" msgid="3352962779597846538">"Baimendu gabe"</string>
+    <string name="notification_listener_allowed" msgid="5536962633536318551">"Baimendutakoak"</string>
+    <string name="notification_listener_not_allowed" msgid="3352962779597846538">"Baimendu gabekoak"</string>
     <string name="notif_listener_excluded_app_title" msgid="6679316209330349730">"Ikusi aplikazio guztiak"</string>
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Aldatu jakinarazpenak bidaltzen dituen aplikazio bakoitzaren ezarpenak"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Gailuan agertzen diren aplikazioak"</string>
@@ -5159,7 +5159,7 @@
     <string name="enable_gnss_raw_meas_full_tracking_summary" msgid="3841463141138247167">"Egin GNSS konstelazio eta maiztasun guztien jarraipena, eginbeharren ziklorik gabe"</string>
     <string name="input_method_category" msgid="2252659253631639005">"Idazketa-metodoa"</string>
     <string name="stylus_handwriting" msgid="2154591374132794563">"Arkatz bidezko idazketa"</string>
-    <string name="stylus_handwriting_summary" msgid="6333425895172696950">"Gaituta dagoenean, une honetako idazketa-metodoak arkatzaren mugimendu-gertaera jasotzen du, editore bat fokuratuta badago."</string>
+    <string name="stylus_handwriting_summary" msgid="6333425895172696950">"Gaituta dagoenean, une honetako idazketa-metodoak arkatzaren mugimendu-gertaera jasotzen du, editore bat fokuratuta badago"</string>
     <string name="device_theme" msgid="5027604586494772471">"Gailuaren gaia"</string>
     <string name="default_theme" msgid="4815428567082263639">"Lehenetsia"</string>
     <string name="show_operator_name_title" msgid="3355910331531144028">"Sarearen izena"</string>
@@ -5541,7 +5541,7 @@
     <string name="power_menu_long_press_for_assist_summary" msgid="8251928804984560312">"Abiarazi Laguntzailea etengailua sakatuta edukiz"</string>
     <string name="power_menu_power_volume_up_hint" msgid="1733051433583045623">"Itzaltzeko eta larrialdietarako menua:\nSakatu etengailua eta bolumena igotzeko tekla aldi berean."</string>
     <string name="power_menu_power_prevent_ringing_hint" msgid="5786494894009727654">"Saihestu tonua jotzea:\nBolumenaren menuan dago lasterbidea."</string>
-    <string name="power_menu_long_press_for_assist_sensitivity_title" msgid="1626808509158422185">"Zenbat denboraz edukiko duzu sakatuta etengailua?"</string>
+    <string name="power_menu_long_press_for_assist_sensitivity_title" msgid="1626808509158422185">"Sakatuta edukitzeko keinuaren iraupena"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_summary" msgid="7550610071666801935">"Sentikortasuna doitzeko, aukeratu zenbat denboraz edukiko duzun sakatuta etengailua"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"Laburra"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"Luzea"</string>
@@ -5657,9 +5657,9 @@
     <string name="prevent_ringing_main_switch_title" msgid="4726252811262086643">"Erabili tonua ez jotzeko aukera"</string>
     <string name="use_wifi_hotsopt_main_switch_title" msgid="3909731167290690539">"Erabili wifi-gunea"</string>
     <string name="app_pinning_main_switch_title" msgid="5465506660064032876">"Erabili aplikazioak ainguratzeko aukera"</string>
-    <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Garatzaileentzako aukerak erabili."</string>
+    <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Erabili garatzaileentzako aukerak"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Erabili inprimatzeko zerbitzua"</string>
-    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Eman erabiltzaile anitz egoteko baimena"</string>
+    <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Baimendu erabiltzaile bat baino gehiago"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Erabili hari gabeko arazketa"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Erabili grafikoen kontrolatzailearen hobespenak"</string>
     <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Erabili bateria-aurreztailea"</string>
