--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -611,7 +611,7 @@
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"Cripta tablet"</string>
     <string name="encrypt_title" product="default" msgid="7337365190988321100">"Cripta telefono"</string>
     <string name="encrypted_summary" msgid="545623487587251207">"Crittografia attiva"</string>
-    <string name="no_screen_lock_issue_title" msgid="1814109590692792891">"Imposta il blocco schermo"</string>
+    <string name="no_screen_lock_issue_title" msgid="1814109590692792891">"Imposta un blocco schermo"</string>
     <string name="no_screen_lock_issue_summary" msgid="2383217853510608406">"Per maggiore sicurezza, imposta un PIN, una sequenza o una password per questo dispositivo."</string>
     <string name="no_screen_lock_issue_action_label" msgid="2691229130486382863">"Imposta un blocco schermo"</string>
     <string name="suggested_lock_settings_title" msgid="7836065447159730217">"Proteggi il tuo telefono"</string>
