--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -221,7 +221,7 @@
     <string name="app_locale_picker_title" msgid="8423365003726200684">"Колдонмонун тили"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Сунушталган тилдер"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Бардык тилдер"</string>
-    <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Тутумдун тили"</string>
+    <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Системанын тили"</string>
     <string name="preference_of_system_locale_summary" msgid="5612241394431188535">"Системанын демейки параметрлери"</string>
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Бул колдонмонун тилин Жөндөөлөрдөн тандоого болбойт."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Тил колдонмодо жеткиликтүү тилдерден айырмаланышы мүмкүн. Бул жөндөө айрым колдонмолор тарабынан колдоого алынбайт болушу мүмкүн."</string>
@@ -2088,9 +2088,9 @@
     <string name="show_background_processes" msgid="5682856012453562151">"Кештелген процсстрд көрст"</string>
     <string name="default_emergency_app" msgid="1929974800666613803">"Өзгөчө кырдаал колдонмосу"</string>
     <string name="reset_app_preferences" msgid="8861758340732716573">"Колдонмонун жөндөөлөрүн кайра коюу"</string>
-    <string name="reset_app_preferences_title" msgid="8935136792316050759">"Колдонмону кайра баштан жөндөйсүзбү?"</string>
+    <string name="reset_app_preferences_title" msgid="8935136792316050759">"Колдонмону кайра коесузбу?"</string>
     <string name="reset_app_preferences_desc" msgid="6509978724602405805">"Ушуну менен, төмөнкүлөр кайра жөндөлөт:\n\n"<li>"Өчүрүлгөн колдонмолор"</li>\n<li>"Өчүрүлгөн колдонмолордун билдирмелери"</li>\n<li>"Демейки колдонмолордун аракеттери"</li>\n<li>"Колдонмолордун Фондук режиминдеги чектөөлөрү"</li>\n<li>"Бардык уруксаттарды чектөөлөр"</li>\n\n"Колдонмонун бардык маалыматтары сакталып калат."</string>
-    <string name="reset_app_preferences_button" msgid="2591318711372850058">"Баштапкы абалга келтирүү"</string>
+    <string name="reset_app_preferences_button" msgid="2591318711372850058">"Кайра коюу"</string>
     <string name="manage_space_text" msgid="9013414693633572277">"Орун бошотуу"</string>
     <string name="filter" msgid="9039576690686251462">"Чыпка"</string>
     <string name="filter_dlg_title" msgid="3086282431958601338">"Электөө опцияларын тандаңыз"</string>
@@ -2693,7 +2693,7 @@
     <string name="manager_battery_usage_unrestricted_title" msgid="2426486290463258032">"Чектелбейт"</string>
     <string name="manager_battery_usage_optimized_title" msgid="8080765739761921817">"Оптималдаштырылган"</string>
     <string name="manager_battery_usage_restricted_title" msgid="7702863764130323118">"Чектелген"</string>
-    <string name="manager_battery_usage_unrestricted_summary" msgid="6819279865465667692">"Колдонмо фондук режимде иштеп жатканда батареянын керектелиши чектелбейт. Батарея тез отуруп калышы мүмкүн."</string>
+    <string name="manager_battery_usage_unrestricted_summary" msgid="6819279865465667692">"Колдонмо фондук режимде иштеп жатканда батарея үнөмдөлбөйт. Батарея тез отуруп калышы мүмкүн."</string>
     <string name="manager_battery_usage_optimized_summary" msgid="1332545476428039900">"Батареянын кубаты анын колдонулушуна жараша оптималдаштырылат. Көптөгөн колдонмолорго сунушталат."</string>
     <string name="manager_battery_usage_restricted_summary" msgid="8324695640704416905">"Фондук режимде батареянын керектелиши чектелет. Колдонмо талаптагыдай иштебей, билдирмелер кечигип көрүнүшү мүмкүн."</string>
     <string name="manager_battery_usage_footer" msgid="2635906573922553766">"Батареяны керектөө ыкмасын өзгөртсөңүз, колдонмонун майнаптуулугуна таасири тийиши мүмкүн."</string>
@@ -4870,7 +4870,7 @@
     <string name="bluetooth_disabled" msgid="835838280837359514">"Өчүк"</string>
     <string name="bluetooth_connected_summary" msgid="8043167194934315712">"<xliff:g id="ID_1">%1$s</xliff:g> менен туташты"</string>
     <string name="bluetooth_connected_multiple_devices_summary" msgid="2294954614327771844">"Бир нече түзмөккө туташты"</string>
-    <string name="demo_mode" msgid="6566167465451386728">"Тутум интерфейсинин демо режими"</string>
+    <string name="demo_mode" msgid="6566167465451386728">"Системанын интерфейсинин демо режими"</string>
     <string name="dark_ui_mode" msgid="898146394425795281">"Караңгы тема"</string>
     <string name="dark_ui_mode_disabled_summary_dark_theme_on" msgid="4554134480159161533">"Батареяны үнөмдөөчү режимде убактылуу өчүрүлдү"</string>
     <string name="ambient_camera_summary_battery_saver_on" msgid="1787784892047029560">"Батареяны үнөмдөөчү режимде убактылуу өчүрүлдү"</string>
