--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -4882,7 +4882,7 @@
     <string name="dark_theme_slice_subtitle" msgid="5555724345330434268">"Батеријата трае подолго"</string>
     <string name="quick_settings_developer_tiles" msgid="7336007844525766623">"Програмерски плочки за брзи поставки"</string>
     <string name="adb_authorization_timeout_title" msgid="6996844506783749754">"Оневозможи го времето за авторизација преку ADB"</string>
-    <string name="adb_authorization_timeout_summary" msgid="409931540424019778">"Овозможи автоматско отповикување на авторизацијата преку ADB за системите што не се поврзале повторно во стандардниот рок (7 дена) или во рокот конфигуриран од корисникот (најмалку 1 ден)."</string>
+    <string name="adb_authorization_timeout_summary" msgid="409931540424019778">"Оневозможи автоматско отповикување на авторизацијата преку ADB за системите што не се поврзале повторно во стандардниот рок (7 дена) или во рокот конфигуриран од корисникот (најмалку 1 ден)."</string>
     <string name="winscope_trace_quick_settings_title" msgid="4104768565053226689">"Трага од Winscope"</string>
     <string name="sensors_off_quick_settings_title" msgid="8472151847125917167">"Сензорите се исклучени"</string>
     <string name="managed_profile_settings_title" msgid="3400923723423564217">"Поставки за работен профил"</string>
@@ -5161,7 +5161,7 @@
     <string name="enable_gnss_raw_meas_full_tracking_summary" msgid="3841463141138247167">"Следете ги сите констелации и фреквенции со GNSS без работен циклус"</string>
     <string name="input_method_category" msgid="2252659253631639005">"Метод за внесување"</string>
     <string name="stylus_handwriting" msgid="2154591374132794563">"Ракописно пишување со пенкало"</string>
-    <string name="stylus_handwriting_summary" msgid="6333425895172696950">"Кога е овозможено, тековниот метод за внесување добива MotionEvent за пенкало ако е фокусиран „Уредник“."</string>
+    <string name="stylus_handwriting_summary" msgid="6333425895172696950">"Кога е овозможено, тековниот метод за внесување добива MotionEvent од пенкалото ако е фокусиран уредувач на текст."</string>
     <string name="device_theme" msgid="5027604586494772471">"Тема на уредот"</string>
     <string name="default_theme" msgid="4815428567082263639">"Стандардно"</string>
     <string name="show_operator_name_title" msgid="3355910331531144028">"Име на мрежата"</string>
