--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -2755,7 +2755,7 @@
     <string name="manager_battery_usage_unrestricted_title" msgid="2426486290463258032">"Bez ograniczeń"</string>
     <string name="manager_battery_usage_optimized_title" msgid="8080765739761921817">"Z optymalizacją"</string>
     <string name="manager_battery_usage_restricted_title" msgid="7702863764130323118">"Z ograniczeniami"</string>
-    <string name="manager_battery_usage_unrestricted_summary" msgid="6819279865465667692">"Zezwalaj na wykorzystanie baterii w tle bez ograniczeń. Może to powodować większe wykorzystanie baterii."</string>
+    <string name="manager_battery_usage_unrestricted_summary" msgid="6819279865465667692">"Zezwalaj na wykorzystanie baterii w tle bez ograniczeń. Może to powodować większe zużycie baterii."</string>
     <string name="manager_battery_usage_optimized_summary" msgid="1332545476428039900">"Optymalizuj na podstawie wykorzystania. Zalecane w przypadku większości aplikacji."</string>
     <string name="manager_battery_usage_restricted_summary" msgid="8324695640704416905">"Ograniczaj wykorzystanie baterii podczas działania w tle. Aplikacja może nie działać zgodnie z oczekiwaniami. Powiadomienia mogą być opóźnione."</string>
     <string name="manager_battery_usage_footer" msgid="2635906573922553766">"Zmiana sposobu wykorzystania baterii przez aplikację może obniżyć wydajność."</string>
@@ -4535,7 +4535,7 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> nieużywanej aplikacji</item>
       <item quantity="one"><xliff:g id="COUNT_0">%d</xliff:g> nieużywana aplikacja</item>
     </plurals>
-    <string name="unused_apps_category" msgid="8954930958175500851">"Nieużywane ustawienia aplikacji"</string>
+    <string name="unused_apps_category" msgid="8954930958175500851">"Ustawienia nieużywanych aplikacji"</string>
     <string name="unused_apps_switch" msgid="7595419855882245772">"Wstrzymaj aktywność w aplikacji, jeśli jest nieużywana"</string>
     <string name="unused_apps_switch_summary" msgid="2171098908014596802">"Usuń uprawnienia i pliki tymczasowe oraz zatrzymaj powiadomienia"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"Wszystkie aplikacje"</string>
