--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -216,7 +216,7 @@
     <string name="add_a_language" msgid="2126220398077503271">"افزودن زبان"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"زبان"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"زبان برگزیده"</string>
-    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"زبان‌های برنامه"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"زبان برنامه‌ها"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"تنظیم زبان برای هر برنامه"</string>
     <string name="app_locale_picker_title" msgid="8423365003726200684">"زبان برنامه"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"زبان‌های پیشنهادی"</string>
@@ -1143,9 +1143,9 @@
     </plurals>
     <string name="wifi_advanced_titlebar" msgid="1234150304285575798">"‏Wi-Fi پیشرفته"</string>
     <string name="wifi_advanced_ssid_title" msgid="1561437650193980185">"SSID"</string>
-    <string name="wifi_advanced_device_mac_address_title" msgid="6155800851233164411">"«نشانی واد» دستگاه"</string>
-    <string name="wifi_advanced_randomized_mac_address_title" msgid="3930671320234553088">"«نشانی واد» تصادفی"</string>
-    <string name="wifi_advanced_randomized_mac_address_disconnected_title" msgid="2755843130417523727">"«نشانی واد» تصادفی (آخرین استفاده)"</string>
+    <string name="wifi_advanced_device_mac_address_title" msgid="6155800851233164411">"«مک آدرس» دستگاه"</string>
+    <string name="wifi_advanced_randomized_mac_address_title" msgid="3930671320234553088">"«مک آدرس» تصادفی"</string>
+    <string name="wifi_advanced_randomized_mac_address_disconnected_title" msgid="2755843130417523727">"«مک آدرس» تصادفی (آخرین استفاده)"</string>
     <string name="wifi_advanced_ip_address_title" msgid="4265355419782184514">"‏نشانی IP"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"جزئیات شبکه"</string>
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"پوشش زیرشبکه"</string>
