--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -3883,7 +3883,7 @@
     <string name="bubbles_feature_education" msgid="4088275802688887634">"Bazı bildirimler ve diğer içerikler ekranda baloncuk olarak görünebilir. Bir baloncuğu açmak için dokunun. Kapatmak için ekranın alt kısmına sürükleyin."</string>
     <string name="bubbles_app_toggle_title" msgid="5319021259954576150">"Baloncuklar"</string>
     <string name="bubbles_conversation_app_link" msgid="5468779786387915337">"Tüm Baloncuk ayarları"</string>
-    <string name="bubbles_conversation_toggle_title" msgid="5225039214083311316">"Bu görüşmeyi balon olarak göster"</string>
+    <string name="bubbles_conversation_toggle_title" msgid="5225039214083311316">"Bu görüşmeyi baloncuk olarak göster"</string>
     <string name="bubbles_conversation_toggle_summary" msgid="720229032254323578">"Kayan simgeyi uygulamaların üzerinde gösterir"</string>
     <string name="bubbles_app_toggle_summary" msgid="1574515698567947948">"<xliff:g id="APP_NAME">%1$s</xliff:g> uygulamasının bazı bildirimleri baloncuk olarak göstermesine izin verin"</string>
     <string name="bubbles_feature_disabled_dialog_title" msgid="1794193899792284007">"Cihaz için baloncuklar açılsın mı?"</string>
